--- a/ogapp/templates/index.html
+++ b/ogapp/templates/index.html
@@ -655,7 +655,7 @@
 					</div>
 				</div>
 				<div class="col-lg-5 ps-lg-5">
-					<h2 class="section-title mb-4">Our Vision & Mission</h2>
+					<h2 class="section-title mb-4">Moving your Home? <br>OG movers are the best and most experienced removalist company in Adelaide.</h2>
 					<p>OGMovers envisions a seamless world of transitions where relocation is a stress-free
 						experience.
 						Our mission is to redefine moving through innovation, reliability, and
@@ -681,18 +681,10 @@
 
 
 					<ul class="list-unstyled custom-list my-4">
-						<h2 class="section-title mb-4">
-							&nbsp;&nbsp;&nbsp;&nbsp;<span>Vision</span><span></span>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<span>Mission</span>
-						</h2>
 
 						<li><b>Thick blankets will be used to protect your belongings.</b></li>
 						&nbsp;&nbsp;&nbsp;&nbsp;
-						<li><b>We employ the most modern and secure packaging boxes.</b> </li>
-						&nbsp;&nbsp;&nbsp;&nbsp;
-
-						<li><b>We verify the precise times of delivery and collection. </b></li>
-						&nbsp;&nbsp;&nbsp;&nbsp;
-						<li><b>At no extra cost, protection for your belongings is included.</b></li>
+						<li><b>We employ the most modern and secure packaging boxes.</b></li>
 						&nbsp;&nbsp;&nbsp;&nbsp;
 					</ul>
 					<a href="{% url 'service' %}" class="btn">Explore</a>
