fix the all new frontend changes

--- a/ogapp/templates/index.html
+++ b/ogapp/templates/index.html
@@ -107,13 +107,15 @@
 			/* Adjust as needed (cover, contain, etc.) */
 			background-repeat: no-repeat;
 		}
-		.bgg{
+
+		.bgg {
 			background-image: url('static/images/c-form.jpeg');
 			background-size: cover;
 			/* Adjust as needed (cover, contain, etc.) */
 			background-repeat: no-repeat;
 		}
-		.text-black{
+
+		.text-black {
 			color: black;
 		}
 	</style>
@@ -151,7 +153,7 @@
 			</div>
 		</div>
 		<div class="bgg">
-		
+
 			<div class="row justify-content-center">
 				<div class="col-md-6">
 					<div class="hero-img-wrap">
@@ -231,9 +233,9 @@
 					</div>
 					</form>
 				</div>
+			</div>
 		</div>
-	</div>
-</div>
+		</div>
 	</section>
 	<!-- Start Product Section -->
 	<style>
@@ -321,8 +323,10 @@
 				<div class="col-md-12 col-lg-3 mb-5 mb-lg-0">
 					<h2 class="mb-4 section-title">Quick Removal Specialist</h2>
 					<p class="mb-4">
-						Do you have an urgent need to relocate to Adelaide? Benefit from our quick and free same-day
-						removal service when you don't pay extra for reservations.. </p>
+						Are you in urgent need to relocate your stuff in Adelaide?
+						OG Movers are here to help.
+						Benefit from our quick and same-day removal services with no extra charges for same day booking,
+						Call us anytime, we are available 24/7. </p>
 					<p><a target="_blank"
 							href="https://api.whatsapp.com/send?phone=+61434653406&text=Hello%2C%20I%27m%20interested%20in%20your%20services."
 							class="btn">Contact Us</a></p>
@@ -359,10 +363,10 @@
 					.cbtn {
 						color: #000000;
 					}
-
 				</style>
 				<h2 class="cbtn price p-1 mt-5" style="text-align: center;">Our Pricing</h2>
-				<h5 class="cbtn p-1 m-1" style="text-align: center;">Fully Transparent Pricing with No Hidden Charges.</h5>
+				<h5 class="cbtn p-1 m-1" style="text-align: center;">Fully Transparent Pricing with No Hidden Charges.
+				</h5>
 				<div class="col-12 col-md-4 col-lg-3 mb-5 mb-md-0">
 					<a class="product-item" href="{% url 'contact' %}">
 						<div class="service-card" style="border: 1px solid #ccc; border-radius: 8px;">
@@ -575,9 +579,13 @@
 			<div class="row justify-content-between">
 				<div class="col-lg-6">
 					<h2 class="section-title">Why Choose Us</h2>
-					<p>Hiring an expert removalist makes your move safe and simple, The experience matters a ton when the volume of things is huge. Doing it without an expert's guidance can increase the chances of damage to your items as well as poses a risk to your safety.
-						It is common to fall for cheap quotations and end up overpaying for the service. Make sure to confirm any hidden charges or callout fees before booking an expert removalist.
-						OG Movers assures that there are no undisclosed fees or expenses charged. Our pricing is fully transparent and we do not charge any Call-out or Stairs fees.</p>
+					<p>Hiring an expert removalist makes your move safe and simple, The experience matters a ton when
+						the volume of things is huge. Doing it without an expert's guidance can increase the chances of
+						damage to your items as well as poses a risk to your safety.
+						It is common to fall for cheap quotations and end up overpaying for the service. Make sure to
+						confirm any hidden charges or callout fees before booking an expert removalist.
+						OG Movers assures that there are no undisclosed fees or expenses charged. Our pricing is fully
+						transparent and we do not charge any Call-out or Stairs fees.</p>
 
 					<div class="row my-5">
 						<div class="col-6 col-md-6">
@@ -655,7 +663,8 @@
 					</div>
 				</div>
 				<div class="col-lg-5 ps-lg-5">
-					<h2 class="section-title mb-4">Moving your Home? <br>OG movers are the best and most experienced removalist company in Adelaide.</h2>
+					<h2 class="section-title mb-4">Moving your Home? <br>OG movers are the best and most experienced
+						removalist company in Adelaide.</h2>
 					<p>OGMovers envisions a seamless world of transitions where relocation is a stress-free
 						experience.
 						Our mission is to redefine moving through innovation, reliability, and
@@ -770,13 +779,14 @@
 							<span class="next" data-controls="next"><span class="fa fa-chevron-right"></span></span>
 						</div>
 
+						<h1>3-Step easy steps to relocate</h1>
 						<div class="testimonial-slider">
-
 							<div class="item">
 								<div class="row justify-content-center">
 									<div class="col-lg-8 mx-auto">
 
 										<div class="testimonial-block text-center">
+											<h1 style="font-weight: 900; font-size: 3rem; color: orange;">1</h1>
 											<h3 class="font-weight-bold" style="color: #000; font-weight: 800;">Obtain a
 												moving estimate </h3>
 											<blockquote class="mb-5">
@@ -804,6 +814,8 @@
 									<div class="col-lg-8 mx-auto">
 
 										<div class="testimonial-block text-center">
+											<h1 style="font-weight: 900; font-size: 3rem; color: orange;">2</h1>
+
 											<h3 class="font-weight-bold" style="color: #000; font-weight: 800;">Plan
 												your relocation</h3>
 											<blockquote class="mb-5">
@@ -832,6 +844,8 @@
 									<div class="col-lg-8 mx-auto">
 
 										<div class="testimonial-block text-center">
+											<h1 style="font-weight: 900; font-size: 3rem; color: orange;">3</h1>
+
 											<h3 class="font-weight-bold" style="color: #000; font-weight: 800;">Go ahead
 											</h3>
 											<blockquote class="mb-5">
@@ -928,9 +942,9 @@
 				<div class="carousel-item" data-bs-interval="1000">
 					<img src="{% static 'images/cross3.png'%}" class="d-block w-100" alt="Slide 3">
 				</div>
-				<!-- <div class="carousel-item" data-bs-interval="1000">
+				<div class="carousel-item" data-bs-interval="1000">
 					<img src="{% static 'images/cross4.png'%}" class="d-block w-100" alt="Slide 4">
-				</div> -->
+				</div>
 			</div>
 			<button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls"
 				data-bs-slide="prev">
@@ -951,7 +965,7 @@
 		<div class="container">
 			<div class="row mb-5">
 				<div class="col-md-6">
-					<h2 class="section-title">Services</h2>
+					<h2 class="section-title">Our Services</h2>
 				</div>
 			</div>
 
@@ -962,11 +976,8 @@
 						<a href="#" class="post-thumbnail"><img src="{% static 'images/services1.jpeg'%}" alt="Image"
 								class="img-fluid"></a>
 						<div class="post-content-entry">
-							<h3><a href="#"></a>Packing Supplies Provision </h3>
-							<p class="p">From Boxes to Bubble Wrap, We Provide Everything You Need for
-								Stress-Free
-								Packing and
-								Moving.</p>
+							<h3><a href="#"></a>House Moving </h3>
+							<p class="p">Moving Your Home, Making Your Dreams Come True.</p>
 
 						</div>
 					</div>
@@ -989,9 +1000,8 @@
 						<a href="#" class="post-thumbnail"><img src="{% static 'images/services3.jpeg'%}" alt="Image"
 								class="img-fluid"></a>
 						<div class="post-content-entry">
-							<h3><a href="#">Heavy item Moving</a></h3>
-							<p class="p">Effortlessly Move Heavy Items with Our Robust Packing and Moving
-								Supplies</p>
+							<h3><a href="#">3. Office relocation</a></h3>
+							<p class="p">Elevate Your Workspace, Expert Relocation for a Fresh Start.</p>
 						</div>
 					</div>
 				</div>
@@ -1035,30 +1045,30 @@
 			<hr>
 			<h1 class="btn btn-dark h1s" onclick="toggleParagraph('service-details')">Our Services</a></h1>
 			<p id="service-details" style="display: none;">
-				We offer packing, transportation, unpacking solutions tailored to your needs.
+				We offer Home removals, Office removals, furniture removals, few items removal and heavy item removal.
 			</p>
 			<hr>
 
-			<h1 class="btn btn-dark h1s" onclick="toggleParagraph('cost-details')">Moving Costs</h1>
+			<h1 class="btn btn-dark h1s" onclick="toggleParagraph('cost-details')">Discount</h1>
 			<p id="cost-details" style="display: none;">
-				Costs depend on factors like distance, volume, and additional services requested.
+				5% dicount winter sale if you book now
 			</p>
 			<hr>
-			<h1 class="btn btn-dark h1s" onclick="toggleParagraph('insurance-details')">Insurance</h1>
+			<h1 class="btn btn-dark h1s" onclick="toggleParagraph('insurance-details')">Same-day removals</h1>
 			<p id="insurance-details" style="display: none;">
-				Yes, basic insurance is included with options for additional coverage.
+				same day removal services with no extra charges
+
 			</p>
 			<hr>
-			<h1 class="btn btn-dark h1s" onclick="toggleParagraph('booking-details')">Booking</h1>
+			<h1 class="btn btn-dark h1s" onclick="toggleParagraph('booking-details')">4.Moving cost</h1>
 			<p id="booking-details" style="display: none;">
-				Book as early as possible, especially during peak seasons, to secure your preferred dates.
+				cheapest and fully transparent pricing
 			</p>
 			<hr>
-			<h1 class="btn btn-dark h1s" onclick="toggleParagraph('local-long-distance-details')">Local and
-				Long-Distance Moves</h1>
+			<h1 class="btn btn-dark h1s" onclick="toggleParagraph('local-long-distance-details')">No hidden charges</h1>
 			<p id="local-long-distance-details" style="display: none;">
-				Yes, we provide both local and long-distance moving services to accommodate various relocation
-				needs.
+				No call out fee
+				no stairs fee
 			</p>
 			<hr>
 		</div>
